fix bug with carousel jump

--- a/src/components/Carusel/Carousel.module.scss
+++ b/src/components/Carusel/Carousel.module.scss
@@ -44,7 +44,7 @@
 }
 
 .Cards {
-  margin-right: 16px;
+  padding-right: 16px;
   padding-bottom: 64px;
 }
 
